# example_ownership

./: CMakeLists.txt  README.md  VERSION.txt  package.xml
msg/: Ownership.msg
src/: publisher.cpp  subscriber.cpp
