<?xml version="1.0"?>
<package format="3">
    <name>nsdk_ownership</name>
    <version>1.0.0</version>
    <description>Neuron SDK ownership example</description>
    <maintainer email="chester.tseng@adlinktech.com">YuSheng Tseng</maintainer>
    <maintainer email="chenying.kuo@adlinktech.com">ChenYing Kuo</maintainer>
    <license>Apache License 2.0</license>

    <buildtool_depend>ament_cmake</buildtool_depend>
    <buildtool_depend>rosidl_default_generators</buildtool_depend>

    <depend>std_msgs</depend>
    <depend>builtin_interfaces</depend>
    <depend>rclcpp</depend>
    <depend>rmw</depend>
    <depend>cyclonedds_options</depend>

    <exec_depend>rosidl_default_runtime</exec_depend>

    <test_depend>ament_lint_common</test_depend>

    <member_of_group>rosidl_interface_packages</member_of_group>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
